Finished investment profile different states

--- a/dashboard-investment-profile-individual-step1.html
+++ b/dashboard-investment-profile-individual-step1.html
@@ -133,16 +133,8 @@
 				<div class="dashboard-wrapper">
 					<div class="dashboard-top-heading d-lg-flex justify-content-between align-items-center">
 						<div class="heading">
-							<a href="dashboard-investment-profile.html" class="back-button">
-								<i class="mdi mdi-arrow-left"></i>
-								Create a new investment profile
-							</a>
+							<h2>INVESTMENT PROFILE</h2>
 						</div>
-					</div>
-					<div class="dashboard-investment-row" style="margin-bottom: 30px;">
-						<span class="invest-title">NEW INVESTMENT PROFILE</span>
-						<p class="profile-text">We will at all times seek to ensure that the personal information collected and held by us is protected from misuse, loss, unauthorised access, modification or disclosure.  At all times your personal information is treated as confidential and any sensitive information is treated as highly confidential.  Your personal information is generally held in your client file which may be in hardcopy or electronic.</p>
-						<p class="profile-text">In the event you cease to be an Akela account holder, any personal information which we hold about you will be maintained in a secure offsite storage facility for a period of seven years in order to comply with legislative and professional requirements, following which time the information will be destroyed.  Akela will ensure that any documents that are destroyed are done so in a secure manner.</p>
 					</div>
 					<div class="dashboard-investment-row">
 						<div class="dashboard-investment-profile profile-details-row row justify-content-between">
@@ -157,13 +149,66 @@
 									</select>
 								</div>
 							</div>
+							<div class="col-md-3">
+								<div class="investment-details">
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span class="font-weight-bold">Investment Profile Status</span>
+										<mark>Active</mark>
+									</div>
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span>Profile details</span>
+										<mark>Complete</mark>
+									</div>
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span>ID verification</span>
+										<mark>Complete</mark>
+									</div>
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span>Wholesale Investor</span>
+										<mark>Yes</mark>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
-					<!--<div class="hint-wrapper">
-						<p>Please, complete the form below to create a new Investment Profile</p>
+					<div class="dashboard-steps-wrapper">
+						<div class="dashboard-investment-steps">
+							<div class="progress-wrapper">
+								<div class="progress-line" style="width: 0;"></div>
+							</div>
+							<div class="d-flex align-items-center justify-content-between">
+								<a href="#" class="step-col active">
+									<div class="circle-wrapper">
+										<div class="circle">
+											<em>1</em>
+											<i class="mdi mdi-check"></i>
+										</div>
+									</div>
+									<span>profile details</span>
+								</a>
+								<a href="#" class="step-col ">
+									<div class="circle-wrapper">
+										<div class="circle">
+											<em>2</em>
+											<i class="mdi mdi-check"></i>
+										</div>
+									</div>
+									<span>id verification</span>
+								</a>
+								<a href="#" class="step-col">
+									<div class="circle-wrapper">
+										<div class="circle">
+											<em>3</em>
+											<i class="mdi mdi-check"></i>
+										</div>
+									</div>
+									<span>wholesale investor</span>
+								</a>
+							</div>
+						</div>
 					</div>
 					<div class="dashboard-investment-row">
-						<span class="invest-title">PROFILE DETAILS</span>
+						<span class="invest-title">Details</span>
 						<div class="row profile-details-row">
 							<div class="col-lg-3 correct">
 								<label for="lbl5">Type</label>
@@ -299,11 +344,13 @@
 								</div>
 							</div>
 						</div>
-					</div>-->
+					</div>
 					<div class="dashboard-investment-row">
 						<div class="row profile-details-row justify-content-center">
 							<div class="col-lg-3">
-								<a href="dashboard-investment-profile-individual-step1.html" class="btn-repeat dashboard-btn fullwidth">Next</a>
+								<div class="button-wrapper" style="margin: 0;">
+									<a href="dashboard-investment-profile-individual-step2.html" class="btn-repeat dashboard-btn fullwidth">Next</a>
+								</div>
 							</div>
 						</div>
 					</div>
