--- a/dashboard-investment-profile-trust-step2.html
+++ b/dashboard-investment-profile-trust-step2.html
@@ -133,177 +133,153 @@
 				<div class="dashboard-wrapper">
 					<div class="dashboard-top-heading d-lg-flex justify-content-between align-items-center">
 						<div class="heading">
-							<a href="dashboard-investment-profile.html" class="back-button">
-								<i class="mdi mdi-arrow-left"></i>
-								Create a new investment profile
-							</a>
+							<h2>INVESTMENT PROFILE</h2>
 						</div>
 					</div>
-					<div class="dashboard-investment-row" style="margin-bottom: 30px;">
-						<span class="invest-title">NEW INVESTMENT PROFILE</span>
-						<p class="profile-text">We will at all times seek to ensure that the personal information collected and held by us is protected from misuse, loss, unauthorised access, modification or disclosure.  At all times your personal information is treated as confidential and any sensitive information is treated as highly confidential.  Your personal information is generally held in your client file which may be in hardcopy or electronic.</p>
-						<p class="profile-text">In the event you cease to be an Akela account holder, any personal information which we hold about you will be maintained in a secure offsite storage facility for a period of seven years in order to comply with legislative and professional requirements, following which time the information will be destroyed.  Akela will ensure that any documents that are destroyed are done so in a secure manner.</p>
-					</div>
+
 					<div class="dashboard-investment-row">
 						<div class="dashboard-investment-profile profile-details-row row justify-content-between">
 							<div class="col-md-5">
 								<div class="select-iprofile">
 									<span class="invest-title" style="margin-bottom: 25px;">SELECT INVESTMENT PROFILE</span>
 									<select>
-										<option value="">Individual</option>
 										<option value="">Company</option>
+										<option value="">Individual</option>
 										<option value="">Trust</option>
 										<option value="">Self managed Superannuation Fund Trustee</option>
 									</select>
 								</div>
 							</div>
-						</div>
-					</div>
-					<!--<div class="hint-wrapper">
-						<p>Please, complete the form below to create a new Investment Profile</p>
-					</div>
-					<div class="dashboard-investment-row">
-						<span class="invest-title">PROFILE DETAILS</span>
-						<div class="row profile-details-row">
-							<div class="col-lg-3 correct">
-								<label for="lbl5">Type</label>
-								<select id="lbl5">
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-								</select>
-							</div>
-							<div class="col-lg-3">
-								<label for="lbl15">Title</label>
-								<select id="lbl15">
-									<option value="">Title</option>
-									<option value="">Title</option>
-									<option value="">Title</option>
-									<option value="">Title</option>
-								</select>
-							</div>
-							<div class="col-lg-3 error">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl6">
-									<label for="lbl6">*Given Name</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl8">
-									<label for="lbl8">Middle name</label>
-								</div>
-							</div>
-						</div>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl9">
-									<label for="lbl9">Surname</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<label for="lbl10">Applicant Number Type</label>
-								<select id="lbl10">
-									<option value="">Applicant Number Type</option>
-									<option value="">Applicant Number Type</option>
-									<option value="">Applicant Number Type</option>
-									<option value="">Applicant Number Type</option>
-								</select>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="number" id="lbl11">
-									<label for="lbl11">Number</label>
+							<div class="col-md-3">
+								<div class="investment-details">
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span class="font-weight-bold">Investment Profile Status</span>
+										<mark>Active</mark>
+									</div>
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span>Profile details</span>
+										<mark>Complete</mark>
+									</div>
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span>ID verification</span>
+										<mark>Complete</mark>
+									</div>
+									<div class="investment-details-row d-flex align-items-center justify-content-between">
+										<span>Wholesale Investor</span>
+										<mark>Yes</mark>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="dashboard-investment-row">
-						<span class="invest-title">POSTAL ADDRESS</span>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<label for="lbl12">*Country</label>
-								<select id="lbl12">
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-								</select>
+					<div class="dashboard-steps-wrapper">
+						<div class="dashboard-investment-steps">
+							<div class="progress-wrapper">
+								<div class="progress-line" style="width: 50%;"></div>
 							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl13">
-									<label for="lbl13">*Street Number & Name</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl14">
-									<label for="lbl14">*Suburb, City or Town</label>
-								</div>
-							</div>
-						</div>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<label for="lbl16">*State</label>
-								<select id="lbl16">
-									<option value="">State</option>
-									<option value="">State</option>
-									<option value="">State</option>
-									<option value="">State</option>
-								</select>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="number" id="lbl17">
-									<label for="lbl17">*Postcode</label>
-								</div>
+							<div class="d-flex align-items-center justify-content-between">
+								<a href="#" class="step-col completed">
+									<div class="circle-wrapper">
+										<div class="circle">
+											<em>1</em>
+											<i class="mdi mdi-check"></i>
+										</div>
+									</div>
+									<span>profile details</span>
+								</a>
+								<a href="#" class="step-col active">
+									<div class="circle-wrapper">
+										<div class="circle">
+											<em>2</em>
+											<i class="mdi mdi-check"></i>
+										</div>
+									</div>
+									<span>id verification</span>
+								</a>
+								<a href="#" class="step-col">
+									<div class="circle-wrapper">
+										<div class="circle">
+											<em>3</em>
+											<i class="mdi mdi-check"></i>
+										</div>
+									</div>
+									<span>wholesale investor</span>
+								</a>
 							</div>
 						</div>
 					</div>
 					<div class="dashboard-investment-row">
-						<span class="invest-title">CHESS HIN OR EXISTING SRN</span>
-						<p class="profile-text">CHESS HIN or SRN (if you want to add this holding to a specific CHESS holder, write the number here) (optional)</p>
-						<div class="row profile-details-row" style="margin-top: 30px;">
-							<div class="col-lg-6">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl18">
+						<span class="invest-title" style="margin-bottom: 25px;">VERIFY ID</span>
+						<p class="profile-text indent-none">You can read more about the AML/CTF program (customer due diligence procedures) here:
+							<br><a href="#">http://www.austrac.gov.au/part-b-amlctf-program-customer-due-diligence-procedures</a></p>
+					</div>
+					<div class="hint-wrapper d-flex justify-content-between">
+						<p>We are obliged to ensure that all our clients complete our Anti-Money Laudering ID requirements</p>
+						<span>AWAITING VERIFICATION</span>
+					</div>
+					<div class="dashboard-steps-row">
+						<span class="invest-title" style="margin-bottom: 25px;"><span>STEP 1.</span> ACCEPT TERMS & CONDITIONS</span>
+						<h3>PRIVACY STATEMENT</h3>
+						<p class="profile-text">We will at all times seek to ensure that the personal information collected and held by us is protected from misuse, loss, unauthorised access, modification or disclosure.  At all times your personal information is treated as confidential and any sensitive information is treated as highly confidential.  Your personal information is generally held in your client file which may be in hardcopy or electronic.</p>
+						<p class="profile-text">In the event you cease to be an Akela account holder, any personal information which we hold about you will be maintained in a secure offsite storage facility for a period of seven years in order to comply with legislative and professional requirements, following which time the information will be destroyed.  Akela will ensure that any documents that are destroyed are done so in a secure manner.</p>
+						<div class="row row-checkbox-terms">
+							<div class="col-md-9">
+								<div class="row">
+									<div class="col-md-4">
+										<div class="checkbox">
+											<input id="check1" type="checkbox" class="verify-checkbox">
+											<label for="check1" class="d-flex">
+												<span><i class="mdi mdi-check"></i></span>
+												<em>READ AND UNDERSTOOD</em>
+											</label>
+										</div>
+									</div>
 								</div>
-							</div>
-							<div class="col-lg-5">
-								<p class="note-text">Please note: if you supply a CHESS HIN but the name and address details on this Application Form do not correspond exactly with the registration details held at CHESS, your Application will be deemed to be made without the CHESS HIN and any Shares issued as a result of the Offer will be held on the issuer sponsored sub-register</p>
 							</div>
 						</div>
 					</div>
-					<div class="dashboard-investment-row">
-						<span class="invest-title">POSTAL ADDRESS</span>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl19">
-									<label for="lbl19">*Contact Person</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="email" id="lbl20">
-									<label for="lbl20">*Email</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="tel" id="lbl21">
-									<label for="lbl21">Phone</label>
-								</div>
+					<div class="dashboard-steps-row verify-container">
+						<span class="invest-title" style="margin-bottom: 25px;"><span>STEP 2.</span> VERIFY YOUR IDENTIFICATION</span>
+						<h3>Verify your identity</h3>
+						<a href="#" class="download-form-button">
+							<span>DOWNLOAD AND COMPLETE THE COMPANY VERIFICATION FORM</span>
+							<i class="mdi mdi-file-pdf"></i>
+						</a>
+					</div>
+					<div class="dashboard-steps-row verify-container">
+						<span class="invest-title" style="margin-bottom: 25px;"><span>STEP 3.</span> UPLOAD COMPLETED FORM</span>
+						<h3>UPLOAD COMPLETED FORM</h3>
+						<p class="profile-text indent-none">Please ensure that you have completed the company verification form with all the required data.</p>
+						<div class="upload-input-wrapper d-flex">
+							<input type="text" class="uploads-container" disabled="">
+							<div class="file">
+								<input type="file">
+								<span>Upload</span>
 							</div>
 						</div>
-					</div>-->
-					<div class="dashboard-investment-row">
-						<div class="row profile-details-row justify-content-center">
-							<div class="col-lg-3">
-								<a href="dashboard-investment-profile-individual-step1.html" class="btn-repeat dashboard-btn fullwidth">Next</a>
+						<p class="profile-text indent-none">Your form will be reviewed and you will be contacted via email to confirm acceptance</p>
+					</div>
+					<div class="dashboard-steps-row verify-container">
+						<span class="invest-title" style="margin-bottom: 25px;"><span>STEP 4.</span> UPLOAD TRUST DEED</span>
+						<h3>UPLOAD TRUST DEED</h3>
+						<p class="profile-text indent-none">An original or certificated copy of the Trust Deed or if not reasonably available an original or certificated extract of the Trust Deed.
+							<br>
+							Extracts of Trust Deeds must include the name of the Trust, Trustees, Beneficiaries, Settlor's and Appointers (where applicable)</p>
+						<div class="upload-input-wrapper d-flex">
+							<input type="text" class="uploads-container" disabled="">
+							<div class="file">
+								<input type="file">
+								<span>Upload</span>
+							</div>
+						</div>
+						<p class="profile-text indent-none">Your form will be reviewed and you will be contacted via email to confirm acceptance</p>
+						<div class="dashboard-investment-row">
+							<div class="row profile-details-row justify-content-center">
+								<div class="col-lg-3">
+									<div class="button-wrapper" style="margin: 0;">
+										<a href="#" class="btn-repeat dashboard-btn fullwidth">Next</a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
