--- a/dashboard-investment-profile.html
+++ b/dashboard-investment-profile.html
@@ -134,231 +134,40 @@
 					<div class="dashboard-top-heading d-lg-flex justify-content-between align-items-center">
 						<div class="heading">
 							<h2>INVESTMENT PROFILE</h2>
-							<a href="dashboard-create-ip.html" class="btn-repeat dashboard-btn">+ CREATE INVESTMENT PROFILE</a>
+							<a href="dashboard-create-ip.html" class="btn-repeat dashboard-btn"><span>+</span> CREATE INVESTMENT PROFILE</a>
 						</div>
 					</div>
-					<div class="dashboard-investment-row">
-						<div class="dashboard-investment-profile profile-details-row row justify-content-between">
-							<div class="col-md-5">
-								<div class="select-iprofile">
-									<span class="invest-title" style="margin-bottom: 25px;">SELECT INVESTMENT PROFILE</span>
-									<select>
-										<option value="">Individual</option>
-										<option value="">Company</option>
-										<option value="">Trust</option>
-										<option value="">Self managed Superannuation Fund Trustee</option>
-									</select>
-								</div>
-							</div>
-							<div class="col-md-3">
-								<div class="investment-details">
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span class="font-weight-bold">Investment Profile Status</span>
-										<mark>Active</mark>
-									</div>
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span>Profile details</span>
-										<mark>Complete</mark>
-									</div>
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span>ID verification</span>
-										<mark>Complete</mark>
-									</div>
-									<div class="investment-details-row d-flex align-items-center justify-content-between">
-										<span>Wholesale Investor</span>
-										<mark>Yes</mark>
-									</div>
-								</div>
-							</div>
+					<div class="dashboard-row">
+						<div class="dashboard-repeat-title">
+							<h3>INVESTMENT PROFILES</h3>
 						</div>
-					</div>
-					<div class="dashboard-steps-wrapper">
-						<div class="dashboard-investment-steps">
-							<div class="progress-wrapper">
-								<div class="progress-line" style="width: 50%;"></div>
-							</div>
-							<div class="d-flex align-items-center justify-content-between">
-								<div class="step-col completed">
-									<div class="circle-wrapper">
-										<div class="circle">
-											<em>1</em>
-											<i class="mdi mdi-check"></i>
-										</div>
-									</div>
-									<span>profile details</span>
-								</div>
-								<div class="step-col active">
-									<div class="circle-wrapper">
-										<div class="circle">
-											<em>2</em>
-											<i class="mdi mdi-check"></i>
-										</div>
-									</div>
-									<span>id verification</span>
-								</div>
-								<div class="step-col">
-									<div class="circle-wrapper">
-										<div class="circle">
-											<em>3</em>
-											<i class="mdi mdi-check"></i>
-										</div>
-									</div>
-									<span>wholesale investor</span>
-								</div>
-							</div>
+						<div class="table-wrapper table-wrapper-profile">
+							<table class="dashboard-table">
+								<thead>
+								<tr>
+									<th style="width: 50%;">TITLE</th>
+									<th style="width: 16%">Type</th>
+									<th style="width: 16%"></th>
+									<th style="width: 16%" class="text-center">wholesale investor</th>
+								</tr>
+								</thead>
+								<tbody>
+								<tr>
+									<td><a href="#" class="table-link">Lorem Ipsum is simply dummy text of the printing and typesetting industry</a></td>
+									<td>Individual</td>
+									<td class="text-center"><span class="profile-status">ACTIVE PROFILE <i class="mdi mdi-approval"></i></span></td>
+									<td class="text-center text-uppercase">Yes</td>
+								</tr>
+								<tr>
+									<td><a href="#" class="table-link">Contrary to popular belief, Lorem Ipsum is not simply random text</a></td>
+									<td>Company</td>
+									<td class="text-center"><span class="profile-status">ACTIVE PROFILE <i class="mdi mdi-approval"></i></span></td>
+									<td class="text-center text-uppercase">No</td>
+								</tr>
+								</tbody>
+							</table>
 						</div>
-					</div>
-					<div class="dashboard-investment-row">
-						<span class="invest-title">Details</span>
-						<div class="row profile-details-row">
-							<div class="col-lg-3 correct">
-								<label for="lbl5">Type</label>
-								<select id="lbl5">
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-								</select>
-							</div>
-							<div class="col-lg-3">
-								<label for="lbl15">Title</label>
-								<select id="lbl15">
-									<option value="">Title</option>
-									<option value="">Title</option>
-									<option value="">Title</option>
-									<option value="">Title</option>
-								</select>
-							</div>
-							<div class="col-lg-3 error">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl6">
-									<label for="lbl6">*Given Name</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl8">
-									<label for="lbl8">Middle name</label>
-								</div>
-							</div>
-						</div>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl9">
-									<label for="lbl9">Surname</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<label for="lbl10">Applicant Number Type</label>
-								<select id="lbl10">
-									<option value="">Applicant Number Type</option>
-									<option value="">Applicant Number Type</option>
-									<option value="">Applicant Number Type</option>
-									<option value="">Applicant Number Type</option>
-								</select>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="number" id="lbl11">
-									<label for="lbl11">Number</label>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="dashboard-investment-row">
-						<span class="invest-title">POSTAL ADDRESS</span>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<label for="lbl12">*Country</label>
-								<select id="lbl12">
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-									<option value="">Individual</option>
-								</select>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl13">
-									<label for="lbl13">*Street Number & Name</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl14">
-									<label for="lbl14">*Suburb, City or Town</label>
-								</div>
-							</div>
-						</div>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<label for="lbl16">*State</label>
-								<select id="lbl16">
-									<option value="">State</option>
-									<option value="">State</option>
-									<option value="">State</option>
-									<option value="">State</option>
-								</select>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="number" id="lbl17">
-									<label for="lbl17">*Postcode</label>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="dashboard-investment-row">
-						<span class="invest-title">CHESS HIN OR EXISTING SRN</span>
-						<p class="profile-text">CHESS HIN or SRN (if you want to add this holding to a specific CHESS holder, write the number here) (optional)</p>
-						<div class="row profile-details-row" style="margin-top: 30px;">
-							<div class="col-lg-6">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl18">
-								</div>
-							</div>
-							<div class="col-lg-5">
-								<p class="note-text">Please note: if you supply a CHESS HIN but the name and address details on this Application Form do not correspond exactly with the registration details held at CHESS, your Application will be deemed to be made without the CHESS HIN and any Shares issued as a result of the Offer will be held on the issuer sponsored sub-register</p>
-							</div>
-						</div>
-					</div>
-					<div class="dashboard-investment-row">
-						<span class="invest-title">POSTAL ADDRESS</span>
-						<div class="row profile-details-row">
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="text" id="lbl19">
-									<label for="lbl19">*Contact Person</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="email" id="lbl20">
-									<label for="lbl20">*Email</label>
-								</div>
-							</div>
-							<div class="col-lg-3">
-								<div class="profile-detail-input">
-									<input type="tel" id="lbl21">
-									<label for="lbl21">Phone</label>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="dashboard-investment-row">
-						<div class="row profile-details-row justify-content-center">
-							<div class="col-lg-3">
-								<div class="button-wrapper" style="margin: 0;">
-									<button type="submit" class="progress-btn main-color-btn">
-										<span>Update</span>
-										<svg class="circle-loader" width="30" height="30" version="1.1" xmlns="http://www.w3.org/2000/svg">
-											<circle cx="15" cy="15" r="10">
-											</circle></svg>
-									</button>
-								</div>
-							</div>
-						</div>
+						<p class="profile-text">To invest in our offers you will need to create an investment profile</p>
 					</div>
 				</div>
 			</div>
