--- a/dashboard-investment-profile-step3.html
+++ b/dashboard-investment-profile-step3.html
@@ -105,7 +105,14 @@
 								<a href="about.html">About us</a>
 							</li>
 							<li>
-								<a href="offer.html">Investment offers</a>
+								<span>Investment offers <i class="mdi mdi-chevron-down"></i></span>
+								<div class="dropdown-submenu-wrapper">
+									<div class="dropdown-submenu">
+										<a href="offer.html">Currently Funding</a>
+										<a href="offer.html">Up & Coming</a>
+										<a href="offer.html">Closed</a>
+									</div>
+								</div>
 							</li>
 							<li>
 								<a href="media.html">Media</a>
