Added offers pages

--- a/offer-upcoming.html
+++ b/offer-upcoming.html
@@ -36,9 +36,9 @@
 								<span>Investment offers <i class="mdi mdi-chevron-down"></i></span>
 								<div class="dropdown-submenu-wrapper">
 									<div class="dropdown-submenu">
-										<a href="offer.html">Currently Funding</a>
-										<a href="offer.html">Up & Coming</a>
-										<a href="offer.html">Closed</a>
+										<a href="offer-currently-funding.html">Currently Funding</a>
+										<a href="offer-upcoming.html" class="active">Up & Coming</a>
+										<a href="offer-closed.html">Closed</a>
 									</div>
 								</div>
 							</li>
@@ -81,7 +81,7 @@
 								</div>
 								<div class="investment-board-buttons">
 									<div class="button-wrap">
-										<a href="#" class="btn-repeat gray">Know more</a>
+										<a href="offer.html" class="btn-repeat gray">Know more</a>
 									</div>
 								</div>
 							</div>
@@ -112,7 +112,7 @@
 								</div>
 								<div class="investment-board-buttons">
 									<div class="button-wrap">
-										<a href="#" class="btn-repeat gray">Know more</a>
+										<a href="offer.html" class="btn-repeat gray">Know more</a>
 									</div>
 									<div class="button-wrap">
 										<a href="#" class="see-all-upcoming">SEE ALL Up &amp; coming</a>
@@ -146,7 +146,7 @@
 								</div>
 								<div class="investment-board-buttons">
 									<div class="button-wrap">
-										<a href="#" class="btn-repeat gray">Know more</a>
+										<a href="offer.html" class="btn-repeat gray">Know more</a>
 									</div>
 									<div class="button-wrap">
 										<a href="#" class="see-all-upcoming">SEE ALL Up &amp; coming</a>
@@ -180,7 +180,7 @@
 								</div>
 								<div class="investment-board-buttons">
 									<div class="button-wrap">
-										<a href="#" class="btn-repeat gray">Know more</a>
+										<a href="offer.html" class="btn-repeat gray">Know more</a>
 									</div>
 									<div class="button-wrap">
 										<a href="#" class="see-all-upcoming">SEE ALL Up &amp; coming</a>
@@ -214,7 +214,7 @@
 								</div>
 								<div class="investment-board-buttons">
 									<div class="button-wrap">
-										<a href="#" class="btn-repeat gray">Know more</a>
+										<a href="offer.html" class="btn-repeat gray">Know more</a>
 									</div>
 									<div class="button-wrap">
 										<a href="#" class="see-all-upcoming">SEE ALL Up &amp; coming</a>
