--- a/offer-currently-funding.html
+++ b/offer-currently-funding.html
@@ -15,11 +15,10 @@
 
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700,900" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.3.54/css/materialdesignicons.min.css">
-
+		<link href="https://cdn.materialdesignicons.com/2.3.54/css/materialdesignicons.min.css" rel="stylesheet">
 	</head>
 	<body>
-		<header class="main-header homepage-header">
+		<header class="main-header darkHeader">
 			<div class="header-holder">
 				<div class="header-wrapper d-flex flex-row justify-content-between align-items-center">
 					<div class="logo">
@@ -33,11 +32,11 @@
 							<li>
 								<a href="about.html">About us</a>
 							</li>
-							<li>
+							<li class="active">
 								<span>Investment offers <i class="mdi mdi-chevron-down"></i></span>
 								<div class="dropdown-submenu-wrapper">
 									<div class="dropdown-submenu">
-										<a href="offer-currently-funding.html">Currently Funding</a>
+										<a href="offer-currently-funding.html" class="active">Currently Funding</a>
 										<a href="offer-upcoming.html">Up & Coming</a>
 										<a href="offer-closed.html">Closed</a>
 									</div>
@@ -67,29 +66,22 @@
 			</div>
 		</header>
 
-		<main class="homepage-main">
-			<section class="hero-banner hero-banner-homepage">
-				<div class="wrapper">
-					<h1>Exclusive access <br> to offers</h1>
-					<a href="#" class="btn-repeat">Know more</a>
-				</div>
-			</section>
-
+		<main class="top-gradient currently-founding-bg">
 			<section class="investment-board wrapper">
 				<div class="investment-board-container">
-					<div class="investment-board-heading">
-						<h2>investment board<mark> // </mark><em>currently funding</em></h2>
+					<div class="offer-title text-center">
+						<span class="dark-color">investment board // currently funding</span>
 					</div>
 					<div class="investment-board-row">
 						<div class="row">
 							<div class="col-md-8">
 								<div class="investment-board-left">
 									<span>Metals 479</span>
-									<p>Metals 479 is a new mineral exploration and development company, with a highly-experienced board & management.</p>
+									<p>Metals 479 is a new mineral exploration and development company, with a highly-experienced board &amp; management.</p>
 								</div>
 								<div class="investment-board-buttons">
 									<div class="button-wrap">
-										<a href="#" class="btn-repeat gray">Know more</a>
+										<a href="offer.html" class="btn-repeat gray">Know more</a>
 									</div>
 								</div>
 							</div>
@@ -112,20 +104,18 @@
 						</div>
 					</div>
 					<div class="investment-board-row">
-						<svg class="circle-loader loading" width="30" height="30" version="1.1" xmlns="http://www.w3.org/2000/svg">
-							<circle cx="15" cy="15" r="10"></circle>
-						</svg>
-					</div>
-					<!--<div class="investment-board-row">
 						<div class="row">
 							<div class="col-md-8">
 								<div class="investment-board-left">
 									<span>Metals 479</span>
-									<p>Metals 479 is a new mineral exploration and development company, with a highly-experienced board & management.</p>
+									<p>Metals 479 is a new mineral exploration and development company, with a highly-experienced board &amp; management.</p>
 								</div>
 								<div class="investment-board-buttons">
 									<div class="button-wrap">
-										<a href="#" class="btn-repeat gray">Know more</a>
+										<a href="offer.html" class="btn-repeat gray">Know more</a>
+									</div>
+									<div class="button-wrap">
+										<a href="#" class="see-all-upcoming">SEE ALL Up &amp; coming</a>
 									</div>
 								</div>
 							</div>
@@ -146,116 +136,112 @@
 								</div>
 							</div>
 						</div>
-					</div>-->
-					<div class="button-wrap">
-						<a href="#" class="see-all-offers">See all current offers</a>
-					</div>
-				</div>
-				<div class="investment-board-container">
-					<div class="investment-board-heading">
-						<h2>investment board<mark> // </mark><em>up & coming</em></h2>
 					</div>
 					<div class="investment-board-row">
 						<div class="row">
 							<div class="col-md-8">
 								<div class="investment-board-left">
-									<span>Kleos Space</span>
-									<p>Kleos is offering a remarkable shift in global geo-located inteligence gathering capability from Space.</p>
+									<span>Metals 479</span>
+									<p>Metals 479 is a new mineral exploration and development company, with a highly-experienced board &amp; management.</p>
 								</div>
 								<div class="investment-board-buttons">
 									<div class="button-wrap">
-										<a href="#" class="btn-repeat gray">Know more</a>
+										<a href="offer.html" class="btn-repeat gray">Know more</a>
 									</div>
 									<div class="button-wrap">
-										<a href="#" class="see-all-upcoming">SEE ALL Up & coming</a>
+										<a href="#" class="see-all-upcoming">SEE ALL Up &amp; coming</a>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="investment-board-right">
-									<span class="status status-opens">Opens: <em>Fri 29 March 2018</em></span>
+									<span class="status status-closes">Closes: <em>Sat 30 MARCH 2018</em></span>
 									<div class="date d-flex">
 										<div class="date-col">
-											<mark>9</mark>
+											<mark>10</mark>
 											<i>Days</i>
 										</div>
 										<div class="date-col">
-											<mark>04</mark>
+											<mark>09</mark>
 											<i>Hours</i>
 										</div>
 									</div>
+									<a href="#" class="btn-repeat dark">BID NOW</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="investment-board-row">
+						<div class="row">
+							<div class="col-md-8">
+								<div class="investment-board-left">
+									<span>Metals 479</span>
+									<p>Metals 479 is a new mineral exploration and development company, with a highly-experienced board &amp; management.</p>
+								</div>
+								<div class="investment-board-buttons">
+									<div class="button-wrap">
+										<a href="offer.html" class="btn-repeat gray">Know more</a>
+									</div>
+									<div class="button-wrap">
+										<a href="#" class="see-all-upcoming">SEE ALL Up &amp; coming</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="investment-board-right">
+									<span class="status status-closes">Closes: <em>Sat 30 MARCH 2018</em></span>
+									<div class="date d-flex">
+										<div class="date-col">
+											<mark>10</mark>
+											<i>Days</i>
+										</div>
+										<div class="date-col">
+											<mark>09</mark>
+											<i>Hours</i>
+										</div>
+									</div>
+									<a href="#" class="btn-repeat dark">BID NOW</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="investment-board-row">
+						<div class="row">
+							<div class="col-md-8">
+								<div class="investment-board-left">
+									<span>Metals 479</span>
+									<p>Metals 479 is a new mineral exploration and development company, with a highly-experienced board &amp; management.</p>
+								</div>
+								<div class="investment-board-buttons">
+									<div class="button-wrap">
+										<a href="offer.html" class="btn-repeat gray">Know more</a>
+									</div>
+									<div class="button-wrap">
+										<a href="#" class="see-all-upcoming">SEE ALL Up &amp; coming</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="investment-board-right">
+									<span class="status status-closes">Closes: <em>Sat 30 MARCH 2018</em></span>
+									<div class="date d-flex">
+										<div class="date-col">
+											<mark>10</mark>
+											<i>Days</i>
+										</div>
+										<div class="date-col">
+											<mark>09</mark>
+											<i>Hours</i>
+										</div>
+									</div>
+									<a href="#" class="btn-repeat dark">BID NOW</a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</section>
-
-			<section class="accessible-investments-container">
-				<img src="images/before-1.png" class="img-fluid before-img" alt="">
-				<div class="accessible-investments-section">
-					<div class="container">
-						<div class="repeat-heading">
-							<span>Accessible investments anytime, anywhere</span>
-						</div>
-						<div class="row">
-							<div class="col-md-4 accessible-col">
-								<figure>
-									<div class="accessible-icon">
-										<img src="images/accessible-icon1.svg" alt="">
-									</div>
-									<figcaption>
-										<span>Financial Investment Platform</span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-									</figcaption>
-								</figure>
-							</div>
-							<div class="col-md-4 accessible-col">
-								<figure>
-									<div class="accessible-icon">
-										<img src="images/accessible-icon2.svg" alt="">
-									</div>
-									<figcaption>
-										<span>total managed solution</span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-									</figcaption>
-								</figure>
-							</div>
-							<div class="col-md-4 accessible-col">
-								<figure>
-									<div class="accessible-icon">
-										<img src="images/accessible-icon3.svg" alt="">
-									</div>
-									<figcaption>
-										<span>trusted industry professionals</span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-									</figcaption>
-								</figure>
-							</div>
-						</div>
-					</div>
-				</div>
-				<img src="images/after-1.png" class="img-fluid after-img" alt="">
-			</section>
-
-			<section class="investment-platform">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-4 investment-platform-col text-center">
-							<div class="investment-platform-image">
-								<img src="images/platform-img.png" class="img-fluid" alt="">
-							</div>
-						</div>
-						<div class="col-md-7 investment-platform-col investment-platform-col-right">
-							<div class="repeat-heading repeat-heading-dark">
-								<span>innovative australian investment platform</span>
-							</div>
-							<div class="investment-platform-description">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem.</p>
-								<a href="#" class="btn-repeat gray">Register</a>
-							</div>
-						</div>
-					</div>
+				<div class="load-more-button text-center">
+					<a href="#" class="btn-repeat dark">Load more</a>
 				</div>
 			</section>
 		</main>
@@ -310,12 +296,14 @@
 				</div>
 			</div>
 		</footer>
+
 		<!-- Include scripts -->
 		<script	src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 		<script type="text/javascript" src="js/lib/jquery-3.3.1.slim.min.js"></script>
 		<script type="text/javascript" src="js/lib/popper.min.js"></script>
 		<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/lib/slick.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
