--- a/terms.html
+++ b/terms.html
@@ -36,9 +36,9 @@
 								<span>Investment offers <i class="mdi mdi-chevron-down"></i></span>
 								<div class="dropdown-submenu-wrapper">
 									<div class="dropdown-submenu">
-										<a href="offer.html">Currently Funding</a>
-										<a href="offer.html">Up & Coming</a>
-										<a href="offer.html">Closed</a>
+										<a href="offer-currently-funding.html">Currently Funding</a>
+										<a href="offer-upcoming.html">Up & Coming</a>
+										<a href="offer-closed.html">Closed</a>
 									</div>
 								</div>
 							</li>
